feat: add WebGL support detection with error overlay

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,7 @@
 @import "./ui/asset-toolbar.css";
 @import "./ui/font-color-picker.css";
 @import "./ui/background-color-picker.css";
+@import "./ui/webgl-error.css";
 
 /* Timeline Styles */
 @import "./timeline/timeline.css";
