feat: add clip timing controls with asset/clip mode toggle

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 /* UI Component Styles */
 @import "./ui/rich-text-toolbar.css";
 @import "./ui/media-toolbar.css";
+@import "./ui/clip-toolbar.css";
 @import "./ui/canvas-toolbar.css";
 @import "./ui/asset-toolbar.css";
 @import "./ui/font-color-picker.css";
