--- a/src/styles/ui/asset-toolbar.css
+++ b/src/styles/ui/asset-toolbar.css
@@ -1,7 +1,7 @@
 .ss-asset-toolbar {
-	position: absolute;
-	left: 8px;
-	top: 50%;
+	position: fixed;
+	/* left/top set by JS via setPosition() */
+	width: fit-content;
 	transform: translateY(-50%);
 	display: flex;
 	flex-direction: column;
